--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Prova 1 Bim - PFS I</title>
+  <title>E-Commerce</title>
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -53,7 +53,7 @@
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
           <li class="nav-item menu-open">
-            <a href="/" class="nav-link">
+            <a href="/admin" class="nav-link">
               <i class="nav-icon fas fa-home"></i>
               <p>
                 Início
@@ -61,7 +61,7 @@
             </a>
           </li>
           <li class="nav-item menu-open">
-            <a href="/produto" class="nav-link">
+            <a href="/admin/produto" class="nav-link">
               <i class="nav-icon fas fa-boxes"></i>
               <p>
                 Produtos
@@ -69,7 +69,7 @@
             </a>
           </li>
           <li class="nav-item menu-open">
-            <a href="/categorias" class="nav-link">
+            <a href="/admin/categorias" class="nav-link">
               <i class="nav-icon fas fa-list"></i>
               <p>
                 Categorias
@@ -77,7 +77,7 @@
             </a>
           </li>
           <li class="nav-item menu-open">
-            <a href="/marcas" class="nav-link">
+            <a href="/admin/marcas" class="nav-link">
               <i class="nav-icon fas fa-clipboard-list"></i>
               <p>
                 Marcas
@@ -85,7 +85,7 @@
             </a>
           </li>
           <li class="nav-item menu-open">
-            <a href="/usuarios" class="nav-link">
+            <a href="/admin/usuarios" class="nav-link">
               <i class="nav-icon fas fa-user"></i>
               <p>
                 Usuários
@@ -93,7 +93,7 @@
             </a>
           </li>
           <li class="nav-item menu-open">
-            <a href="/perfis" class="nav-link">
+            <a href="/admin/perfis" class="nav-link">
               <i class="nav-icon fas fa-users"></i>
               <p>
                 Perfis
