--- a/views/usuarios/listagem.ejs
+++ b/views/usuarios/listagem.ejs
@@ -23,7 +23,7 @@
                         <td><%= lista[i].perfilId %></td>
                         <td><%= lista[i].usuarioAtivo %></td>
                         <td>
-                            <a href="/usuarios/alterar/<%= lista[i].usuarioId %>" class="btn btn-primary"><i class="fas fa-pen"></i></a>
+                            <a href="/admin/usuarios/alterar/<%= lista[i].usuarioId %>" class="btn btn-primary"><i class="fas fa-pen"></i></a>
                             <button data-codigoexclusao="<%= lista[i].usuarioId %>" class="btn btn-danger btnExclusao"><i class="fas fa-trash"></i></button>
                         </td>
                     </tr>
