feat: alteração de quantidade dinamica no carrinho

--- a/views/Vitrine/index.ejs
+++ b/views/Vitrine/index.ejs
@@ -144,8 +144,8 @@
                 aria-label="Close"
               ></button>
             </div>
-            <div class="modal-body" id="corpoCarrinho">
-                <!-- html gerado dinamicamente via ejs -->
+            <div class="modal-body table-responsive" id="corpoCarrinho">
+              <!-- html gerado dinamicamente via ejs -->
             </div>
             <div class="modal-footer">
               <button
