feat: adicionado gravacao de pedido no banco de dados

--- a/views/Vitrine/index.ejs
+++ b/views/Vitrine/index.ejs
@@ -155,7 +155,11 @@
               >
                 Fechar
               </button>
-              <button type="button" class="btn btn-primary">
+              <button
+                id="btnConfirmarPedido"
+                type="button"
+                class="btn btn-primary"
+              >
                 Confirmar pedido
               </button>
             </div>
