--- a/views/Marca/listar.ejs
+++ b/views/Marca/listar.ejs
@@ -1,23 +1,22 @@
 <div>
-    <h1>Marcas cadastradas</h1>
+  <h1>Marcas cadastradas</h1>
 
-    <div class="table-responsive" style="margin-top: 15px;">
-        <table class="table table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>Código</th>
-                    <th>Nome</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% lista.map(function(value, index) { %>
-                    <tr>
-                        <td><%= value.marcaId %></td>
-                        <td><%= value.marcaNome %></td>
-                    </tr>
-                <% }) %>
-            </tbody>
-        </table>
-    </div>
+  <div class="table-responsive" style="margin-top: 15px">
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th>Código</th>
+          <th>Nome</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% lista.map(function(value, index) { %>
+        <tr>
+          <td><%= value.marcaId %></td>
+          <td><%= value.marcaNome %></td>
+        </tr>
+        <% }) %>
+      </tbody>
+    </table>
+  </div>
 </div>
-
